JumpScript/tests/baselines/reference/parserVariableStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserVariableStatement1.d.jump(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.jump file.
tests/cases/conformance/parser/ecmascript5/Statements/parserVariableStatement1.d.jump(1,7): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserVariableStatement1.d.jump (2 errors) ====
    var v = 1;
    ~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.jump file.
          ~
!!! error TS1039: Initializers are not allowed in ambient contexts.